--- a/ya_test_classifier.ipynb
+++ b/ya_test_classifier.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "15bEvTUFfERTE9rBInIrkwqn20xqjQzcI",
-      "authorship_tag": "ABX9TyP2HC/AvhsQpmp4MfVbwPPa",
+      "authorship_tag": "ABX9TyP7cPXUeNvInUR3CNdZn/mF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
       "metadata": {
         "id": "cLrYNrqFdvA7"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
         "          )\n",
         "        '''\n",
         "    )\n",
-        "    model = pd.read_csv('/content/drive/MyDrive/Testovye/model.csv')\n",
+        "    model = pd.read_csv('model.csv')\n",
         "    model.to_sql('model', connection, if_exists='append', index = False)\n",
         "\n",
         "  except sqlite3.OperationalError:\n",
@@ -100,7 +100,7 @@
         "        '''\n",
         "    )\n",
         "      \n",
-        "    partner = pd.read_csv('/content/drive/MyDrive/Testovye/partner.csv')\n",
+        "    partner = pd.read_csv('partner.csv')\n",
         "    partner.to_sql('partner', connection, if_exists='append', index = False)\n",
         "\n",
         "  except sqlite3.OperationalError:\n",
@@ -203,7 +203,7 @@
       "metadata": {
         "id": "_EmvfZnNHz3f"
       },
-      "execution_count": 188,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -544,7 +544,7 @@
       "metadata": {
         "id": "5rG-RiwF3vuK"
       },
-      "execution_count": 228,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -566,7 +566,7 @@
         "from pathlib import Path\n",
         "\n",
         "# создаем базу данных\n",
-        "conn = sqlite3.connect(\"/content/drive/MyDrive/Testovye/mydatabase.db\")\n",
+        "conn = sqlite3.connect(\"mydatabase.db\")\n",
         "curs = conn.cursor()\n",
         "\n",
         "# создаем необходимые таблицы\n",
@@ -596,7 +596,7 @@
       "metadata": {
         "id": "wD3ILP6lc8Ju"
       },
-      "execution_count": 185,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -608,7 +608,7 @@
       "metadata": {
         "id": "wpahhqYsc-UF"
       },
-      "execution_count": 186,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -623,7 +623,7 @@
         "id": "V4qfQFCLdCl3",
         "outputId": "3a496c89-fcc0-46e3-a8d5-c1ae4d1574ae"
       },
-      "execution_count": 230,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -661,7 +661,7 @@
         "id": "RZOrvJiJ7N39",
         "outputId": "9c41c4db-0ab6-461c-bb90-2c58b94317c9"
       },
-      "execution_count": 231,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
